--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Video Gallery Grid</title>
+    <title>AI Video Generator</title>
     <script type="importmap">
 {
   "imports": {
@@ -32,7 +32,7 @@
     </style>
   <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-gray-900">
+  <body class="bg-gray-100 dark:bg-gray-900">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
